--- a/PetApp_Empresa/appsettings.json
+++ b/PetApp_Empresa/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=totomhw\\TOTOMHW;Database=PettappPrueba;User Id=sa;Password='12345';Trusted_connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=totomhw\\TOTOMHW;Database=PettappPrueba;User Id=sa;Password='12345';Trusted_connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
