se modifico el carrito de compras, ya funciona el TOTAL de la vista carrito, ya funciona el CRUD de ACCESORIOS, y demas

--- a/PetApp_Empresa/appsettings.json
+++ b/PetApp_Empresa/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=kyara;Database=PettAppPrueba;Trusted_connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=SERG\\SQLEXPRESS;Database=PettappPrueba;Trusted_connection=true;TrustServerCertificate=true;"
     }
 }
