--- a/PetApp_Empresa/appsettings.json
+++ b/PetApp_Empresa/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=kyara;Database=PettAppPrueba;Trusted_connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TOTOMHW\\TOTOMHW;Database=tiendadb;User Id=sa;Password='12345';Trusted_connection=true;TrustServerCertificate=true;"
+  }
 }
