Se agregaron contenidos y graficos al dashboard VENDEDOR

--- a/PetApp_Empresa/appsettings.json
+++ b/PetApp_Empresa/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=TOTOMHW\\TOTOMHW;Database=tiendadb;User Id=sa;Password='12345';Trusted_connection=true;TrustServerCertificate=true;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=SERG\\SQLEXPRESS;Database=PettappPrueba;Trusted_connection=true;Connect Timeout=30;TrustServerCertificate=true;"
+    }
 }
